--- a/style.css
+++ b/style.css
@@ -14,10 +14,11 @@ section {
     padding-top: 5rem;
 }
 
-.svg3 {
-    position: absolute;
-}
 
 .card-contact {
     margin: 0 2rem;
 }
+
+.svg1, .svg2, .svg3 {
+    margin-bottom: -1rem;
+} 
