--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ section {
 
 
 .card-contact {
-    margin: 0 2rem;
+    margin: 0 10px;
 }
 
 .svg1, .svg2, .svg3 {
-    margin-bottom: -1rem;
+    margin-bottom: -0.2rem;
 } 
